# MC-Prediction

./: APO_004_fasta_scores_alphafold2_multimer_v3_model_1_seed_000.json  APO_004_fasta_scores_alphafold2_multimer_v3_model_2_seed_000.json  APO_004_fasta_scores_alphafold2_multimer_v3_model_3_seed_000.json  APO_004_fasta_scores_alphafold2_multimer_v3_model_3_seed_000.jsonZone.Identifier  APO_004_fasta_scores_alphafold2_multimer_v3_model_4_seed_000.json  APO_004_fasta_scores_alphafold2_multimer_v3_model_5_seed_000.json  FASTA_multimer.py  README.md  engine  fasta template  loss.py  nt_apo.py  pae_apo.py  plot_aa.py  pyproject.toml  runsimulation
