[project]
name = "pepop"
version = "0.1.0"
description = "06/11, Chris played with this file to ensure dependencies are added"
authors = [
    { name = "Shanil Panara", email = "shanil.panara@nanograb.com" },
    { name = "Chris Pang", email = "chris.pang@nanograb.com" }
]
dependencies = [
    "softnanotools>=0.7.0", 
    "pandas>=2.2.2", 
    "numpy",
    "matplotlib",
    "black",
    "torch >= 1.9.0",
    "transformers",
    "modlamp"
]
readme = "README.md"
requires-python = ">= 3.8"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# [tool.rye]
# managed = true
# dev-dependencies = [
#     "ruff>=0.4.4",
#     "black>=24.4.2",
# ]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pepop"]
